# unoq-starter-rs

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.claude/: settings.local.json
mcu/: Cargo.toml  build.rs  memory.x
mcu/src/: main.rs
mpu/: Cargo.toml
mpu/src/: main.rs
